- Fixed bug that was creating a delay on script tab change; - Removed scripts' saving routine when a script is closed; - Fixed bug that was preventing users to close more than one tab; - Added option to reset app to its default state when user close all opened scripts; - Removed scrollbar on tables' <select> filters; - Added Ctrl+F shortcut on desktop version that, for now, set focus on the search input field of the currently selected script; - Added "Resizable" jQuery UI library, in order to combine it with the "jQuery highlightTextarea" component.

--- a/css/css.css
+++ b/css/css.css
@@ -211,6 +211,7 @@ div.file-list label.submit:active{
 	top: 14px;
 	border: 1px solid transparent;
 	border-radius: 3px;
+	color: #666;
 }
 #scripts-tabs span.remove-script:hover,
 #scripts-tabs span.remove-script:focus{
@@ -280,6 +281,10 @@ tr.highlight>td:after{
 td.form-fields textarea.text-field{
 	width: 100%;
 	height: 115px;
+}
+.highlightTextarea .ui-resizable-se{
+	bottom: 28px;
+	right: 24px;
 }
 .dialog-preview{
 	width: 400px;
@@ -375,9 +380,6 @@ td.form-fields textarea.text-field{
 }
 .dialog-preview.ds.invalid{
 	background: url('../images/dialog_box_invalid_ds.png?v=1.0.0');
-}
-div.dataTables_wrapper div.footer{
-	margin-top: 15px;
 }
 .popover{
 	cursor: pointer;
@@ -534,6 +536,9 @@ input[type="radio"]:checked + label::before {
 .select2-container--default .select2-selection--single .select2-selection__arrow{
 	height: 32px;
 }
+.select2-container--default.no-overflow .select2-results>.select2-results__options{
+	max-height: none;
+}
 
 /* Progress bar animation removal */
 .progress-bar {
@@ -612,5 +617,8 @@ input[type="radio"]:checked + label::before {
 	}
 	#main-tabs>li:not(:last-child){
 		margin-bottom: 99.4px;
+	}
+	.select2-container--default.no-overflow .select2-results>.select2-results__options{
+		max-height: 450px;
 	}
 }
